@@ -8,6 +8,8 @@ Date=2015-08-16T14:22:00
 Comments= <<EOT
 - Rename module (change case) back to Benchmark::Featureset::StopwordLists, since CPAN
 complained.
+- Add repository on github to Makefile.PL:
+https://rt.cpan.org/Public/Dist/Display.html?Name=Benchmark-Featureset-StopwordLists
 EOT
 
 [V 1.02]
