@@ -3,6 +3,8 @@ Revision history for Perl extension Benchmark::Featureset::StopwordLists.
 1.03  Sun Aug 16 14:22:00 2015
 	- Rename module (change case) back to Benchmark::Featureset::StopwordLists, since CPAN
 		complained.
+	- Add repository on github to Makefile.PL:
+		https://rt.cpan.org/Public/Dist/Display.html?Name=Benchmark-Featureset-StopwordLists
 
 1.02  Wed Feb 18 16:32:00 2015
 	- Rename CHANGES to Changes as per CPAN::Spec::Changes.
